--- a/contributing.html
+++ b/contributing.html
@@ -81,13 +81,13 @@
         <!--================Work Area =================-->
         <section class="work_area p_120">
             <div class="main_title">
-              <h2>Contributing to SpeechBrain</h2>
+              <h2> 🚀 Contributing to SpeechBrain</h2>
               <p class="justified large"> The goal is to collectively write a set of open-source libraries for Conversational AI.
                 It is crucial to write a set of homogeneous libraries that are all compliant with a set of guidelines described
                 in our <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html"> documentation </a>.
               </p>
 	      <br>
-              <h3> Zen of SpeechBrain </h3>
+              <h3> 🌟 Zen of SpeechBrain </h3>
               <p class="justified large"> SpeechBrain could be used for research, academic, commercial, non-commercial purposes.If you want to contribute, keep in mind the following features:
 	      <br/><br/>
              <b>Simplicity:</b> the code must be easy to understand even by students or users that are not professional programmers or speech researchers.
@@ -107,17 +107,20 @@
                 <b>Details about this process (i.e including steps for installing the tests) are given in <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html"> the documentation </a>.</b>
               </p>
 	 <br/><br/>
-              <h3> How can I help? </h3>
+              <h3> 🙌 How can I help? </h3>
               <p class="justified large">  Examples of contributions include new recipes, new models, new external functionalities, solving issues/bugs.
               </p>
             </div>
 
 
             <div class="main_title">
-              <h2>Contributors</h2>
+              <h2> 🌟 Contributors</h2>
               <p class="justified large"> We would like to thank the following contributors: </p>
-            </div>
-            <ul class="contributors-list">
+<div class="main_title">
+  <h2>🌟 Contributors</h2>
+  <p class="justified large">We would like to thank the following contributors:</p>
+</div>
+<ul class="contributors-list">
               <li>Mirco Ravanelli, Concordia University, Mila (CA)</li>
               <li>Titouan Parcollet, Samsung, Cambridge University (UK)</li>
               <li>Peter Plantinga, Ohio State University (USA)</li>
@@ -142,28 +145,28 @@
 	      <li> Jarod Duret, Avignon Université (LIA, FR</li>
 	      <li> Sangeet Sagar, Saarland University (GE)<li>
 	      <li> Gaëlle Laperrière, Avignon Université (LIA, FR) <li> 
-	      <li>Loren Lugosch, Mila, McGill University (CA)</li>
-              <li>Nauman Dawalatabad, Indian Institute of Technology Madras (IN)</li>
-              <li>Ju-Chieh Chou, National Taiwan University (TW)</li>
-              <li>Abdel Heba, Linagora / University of Toulouse (IRIT, FR)</li>
-              <li>Francois Grondin, University of Sherbrooke (CA)</li>
-              <li>William Aris, University of Sherbrooke (CA)</li>
-              <li>Chien-Feng Liao, National Taiwan University (TW)</li>
-              <li>Samuele Cornell, Università Politecnica delle Marche (IT)</li>
-              <li>Sung-Lin Yeh, National Tsing Hua University (TW)</li>
-              <li>Hwidong Na, Visiting Researcher Samsung SAIL (CA)</li>
-              <li>Yan Gao, University of Cambridge (UK)</li>
-              <li>Szu-Wei Fu, Academia Sinica (TW)</li>
-	      <li>Elena Rastorgueva, University of Cambridge (UK)</li>
-              <li>Jianyuan Zhong, University of Rochester (USA)<li>
-              <li>Brecht Desplanques, Ghent University (BE)<li>
-              <li>Jenthe Thienpondt, Ghent University (BE)<li>
-	      <li>Salima Mdhaffar, Avignon Université (LIA, FR)<li>
-	      <li>Yannick Estève, Avignon University (LIA, FR)</li>
-              <li>Renato De Mori, McGill University (CA), Avignon University (LIA, FR)</li>
-              <li>Yoshua Bengio, Mila, University of Montréal (CA)</li>
-            </ul>
-          </div>
+	      <li> Loren Lugosch, Mila, McGill University (CA)</li>
+              <li> Nauman Dawalatabad, Indian Institute of Technology Madras (IN)</li>
+              <li> Ju-Chieh Chou, National Taiwan University (TW)</li>
+              <li> Abdel Heba, Linagora / University of Toulouse (IRIT, FR)</li>
+              <li> Francois Grondin, University of Sherbrooke (CA)</li>
+              <li> William Aris, University of Sherbrooke (CA)</li>
+              <li> Chien-Feng Liao, National Taiwan University (TW)</li>
+              <li> Samuele Cornell, Università Politecnica delle Marche (IT)</li>
+              <li> Sung-Lin Yeh, National Tsing Hua University (TW)</li>
+              <li> Hwidong Na, Visiting Researcher Samsung SAIL (CA)</li>
+              <li> Yan Gao, University of Cambridge (UK)</li>
+              <li> Szu-Wei Fu, Academia Sinica (TW)</li>
+	      <li> Elena Rastorgueva, University of Cambridge (UK)</li>
+              <li> Jianyuan Zhong, University of Rochester (USA)<li>
+              <li> Brecht Desplanques, Ghent University (BE)<li>
+              <li> Jenthe Thienpondt, Ghent University (BE)<li>
+	      <li> Salima Mdhaffar, Avignon Université (LIA, FR)<li>
+	      <li> Yannick Estève, Avignon University (LIA, FR)</li>
+              <li> Renato De Mori, McGill University (CA), Avignon University (LIA, FR)</li>
+              <li> Yoshua Bengio, Mila, University of Montréal (CA)</li>
+ </ul>
+ </div>
         </section>
         <!--================End Work Area =================-->
 
