--- a/contributing.html
+++ b/contributing.html
@@ -112,61 +112,57 @@
               </p>
             </div>
 
-
-            <div class="main_title">
-              <h2> 🌟 Contributors</h2>
-              <p class="justified large"> We would like to thank the following contributors: </p>
 <div class="main_title">
   <h2>🌟 Contributors</h2>
   <p class="justified large">We would like to thank the following contributors:</p>
 </div>
-<ul class="contributors-list">
-              <li>Mirco Ravanelli, Concordia University, Mila (CA)</li>
-              <li>Titouan Parcollet, Samsung, Cambridge University (UK)</li>
-              <li>Peter Plantinga, Ohio State University (USA)</li>
-	      <li>Aku Rouhe, Aalto University (FI)</li>
-	      <li>Adel Moumen, Avignon Université (LIA, FR) </li>
-	      <li>Sylvain de Langen, Avignon Université (LIA, FR) </li>
-	      <li>Cem Subakan, Mila, Laval University (CA)</li>
-	      <li>Luca Della Libera, Concordia  University, Mila (CA)</li>
-	      <li>Pooneh Mousavi, Concordia  University, Mila (CA)</li>	
-	      <li>Artem Ploujnikov, Université de Montréal, Mila (CA)</li>	
-	      <li>Davide Borra, University of Bologna (IT)</li>
-              <li>Francesco Paissan, Fondazione Bruno Kessler (IT)</li>
-	      <li>Mahed Mousavi, University of Trento (IT)</li>
-	      <li>Salah Zaiem, Telecom Paris (FR)</li>
-	      <li>Zeyu Zhao, University of Edinburgh (UK)</li> 
-	      <li> Pierre Champion,  INRIA (FR)</li> 
-	      <li> Sung-Lin Yeh, University of Edinburgh (UK)</li> 
-	      <li> Yingzhi Wang, Zaion (FR)</li> 
-	      <li> Xuechen Liu, Aalto University (FI)</li> 
-	      <li> Andreas Nautsch, Avignon Université (LIA, FR)</li> 
-	      <li> Pradnya Kandarkar, Concordia University</li>
-	      <li> Jarod Duret, Avignon Université (LIA, FR</li>
-	      <li> Sangeet Sagar, Saarland University (GE)<li>
-	      <li> Gaëlle Laperrière, Avignon Université (LIA, FR) <li> 
-	      <li> Loren Lugosch, Mila, McGill University (CA)</li>
-              <li> Nauman Dawalatabad, Indian Institute of Technology Madras (IN)</li>
-              <li> Ju-Chieh Chou, National Taiwan University (TW)</li>
-              <li> Abdel Heba, Linagora / University of Toulouse (IRIT, FR)</li>
-              <li> Francois Grondin, University of Sherbrooke (CA)</li>
-              <li> William Aris, University of Sherbrooke (CA)</li>
-              <li> Chien-Feng Liao, National Taiwan University (TW)</li>
-              <li> Samuele Cornell, Università Politecnica delle Marche (IT)</li>
-              <li> Sung-Lin Yeh, National Tsing Hua University (TW)</li>
-              <li> Hwidong Na, Visiting Researcher Samsung SAIL (CA)</li>
-              <li> Yan Gao, University of Cambridge (UK)</li>
-              <li> Szu-Wei Fu, Academia Sinica (TW)</li>
-	      <li> Elena Rastorgueva, University of Cambridge (UK)</li>
-              <li> Jianyuan Zhong, University of Rochester (USA)<li>
-              <li> Brecht Desplanques, Ghent University (BE)<li>
-              <li> Jenthe Thienpondt, Ghent University (BE)<li>
-	      <li> Salima Mdhaffar, Avignon Université (LIA, FR)<li>
-	      <li> Yannick Estève, Avignon University (LIA, FR)</li>
-              <li> Renato De Mori, McGill University (CA), Avignon University (LIA, FR)</li>
-              <li> Yoshua Bengio, Mila, University of Montréal (CA)</li>
+<div class="contributors-list">
+              - Mirco Ravanelli, Concordia University, Mila (CA)<br>
+              - Titouan Parcollet, Samsung, Cambridge University (UK)<br>
+              - Peter Plantinga, Ohio State University (USA)<br>
+	      - Aku Rouhe, Aalto University (FI)<br>
+	      - Adel Moumen, Avignon Université (LIA, FR) <br>
+	      - Sylvain de Langen, Avignon Université (LIA, FR) <br>
+	      - Cem Subakan, Mila, Laval University (CA)<br>
+	      - Luca Della Libera, Concordia  University, Mila (CA)<br>
+	      - Pooneh Mousavi, Concordia  University, Mila (CA)<br>	
+	      - Artem Ploujnikov, Université de Montréal, Mila (CA)<br>	
+	      - Davide Borra, University of Bologna (IT)<br>
+              - Francesco Paissan, Fondazione Bruno Kessler (IT)<br>
+	      - Mahed Mousavi, University of Trento (IT)<br>
+	      - Salah Zaiem, Telecom Paris (FR)<br>
+	      - Zeyu Zhao, University of Edinburgh (UK)<br> 
+	      - Pierre Champion,  INRIA (FR)<br> 
+	      - Sung-Lin Yeh, University of Edinburgh (UK)<br> 
+	      - Yingzhi Wang, Zaion (FR)<br> 
+	      - Xuechen Liu, Aalto University (FI)<br> 
+	      - Andreas Nautsch, Avignon Université (LIA, FR)<br> 
+	      - Pradnya Kandarkar, Concordia University<br>
+	      - Jarod Duret, Avignon Université (LIA, FR<br>
+	      - Sangeet Sagar, Saarland University (GE) <br>
+	      - Gaëlle Laperrière, Avignon Université (LIA, FR)  <br>
+	      - Loren Lugosch, Mila, McGill University (CA)<br>
+              - Nauman Dawalatabad, Indian Institute of Technology Madras (IN)<br>
+              - Ju-Chieh Chou, National Taiwan University (TW)<br>
+              - Abdel Heba, Linagora / University of Toulouse (IRIT, FR)<br>
+               - Francois Grondin, University of Sherbrooke (CA)<br>
+               - William Aris, University of Sherbrooke (CA)<br>
+               - Chien-Feng Liao, National Taiwan University (TW)<br>
+               - Samuele Cornell, Università Politecnica delle Marche (IT)<br>
+               - Sung-Lin Yeh, National Tsing Hua University (TW)<br>
+               - Hwidong Na, Visiting Researcher Samsung SAIL (CA)<br>
+               - Yan Gao, University of Cambridge (UK)<br>
+               - Szu-Wei Fu, Academia Sinica (TW)<br>
+	       - Elena Rastorgueva, University of Cambridge (UK)<br>
+               - Jianyuan Zhong, University of Rochester (USA) <br>
+               - Brecht Desplanques, Ghent University (BE) <br>
+               - Jenthe Thienpondt, Ghent University (BE) <br>
+	       - Salima Mdhaffar, Avignon Université (LIA, FR) <br>
+	       - Yannick Estève, Avignon University (LIA, FR)<br>
+               - Renato De Mori, McGill University (CA), Avignon University (LIA, FR)<br>
+               - Yoshua Bengio, Mila, University of Montréal (CA)<br>
  </ul>
- </div>
+</div>
         </section>
         <!--================End Work Area =================-->
 
