--- a/contributing.html
+++ b/contributing.html
@@ -97,7 +97,7 @@
 <br/><br/>
 		      <b>Documentation:</b> Given the goals of SpeechBrain, writing rich and good documentation is a crucial step. Write docstrings with runnable examples (as done in PyTorch code).
 	<br/><br/>      
-              <h3> How to get my code into SpeechBrain? </h3>
+              <h3> 🔧 How to get my code into SpeechBrain? </h3>
               <p class="justified large"> SpeechBrain is hosted via <a href="https://github.com/speechbrain/speechbrain"> GitHub </a>. Contributing requires three steps: <br/><br/>
                 <b>1.</b> Fork, clone the <a href="https://github.com/speechbrain/speechbrain">repository</a> and install our test suite as detailed in <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html"> the documentation </a>. <br/>
                 <b>2.</b> Write your code and test it properly. Commit your changes to your fork with our pre-commit tests to ensure tests are passing.
