--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
               <div class="grid_container">
                 <div class="grid">
                   <div><img src="img/partners/logo_lia.png" alt=""></div>
-		  <div><img src="img/partners/Concordia-University.png" alt=""></div>
+		  <div><img class="img-partner" src="img/sponsors/concordia.png""></div>
                   <div><img src="img/partners/logo_cambridge.png" alt=""></div>
                   <div><img src="img/partners/logo_sherbrooke.jpg" alt=""></div>
                 </div>
