--- a/index.html
+++ b/index.html
@@ -333,6 +333,12 @@
 					<img src="img/sponsors/samsung_official.png" style="max-width: 250px; padding-top:100px;" alt="">
 				</div>
 			  </div>
+		    	<div class="col-lg-4">
+				<div class="work_item">
+					<img src="img/sponsors/concordia.png" style="max-width: 250px; padding-top:100px;" alt="">
+				</div>
+			  </div>
+
         </section>
         <!--================End Screen Area =================-->
 
