--- a/contributing.html
+++ b/contributing.html
@@ -158,6 +158,7 @@
               <li> Brecht Desplanques, Ghent University (BE)<li>
               <li> Jenthe Thienpondt, Ghent University (BE)<li>
 	      <li> Salima Mdhaffar, Avignon Université (LIA, FR)<li>
+        <li> Mickael Rouvier, Avignon University (LIA, FR)</li>
 	      <li> Yannick Estève, Avignon University (LIA, FR)</li>
               <li> Renato De Mori, McGill University (CA), Avignon University (LIA, FR)</li>
               <li> Yoshua Bengio, Mila, University of Montréal (CA)</li>
