--- a/contributing.html
+++ b/contributing.html
@@ -133,6 +133,7 @@
 	      <li>Salah Zaiem, Telecom Paris (FR)</li>
 	      <li>Zeyu Zhao, University of Edinburgh (UK)</li> 
 	      <li> Pierre Champion,  INRIA (FR)</li> 
+        <li> Georgios Karakasidis, University of Edinburgh (UK)</li> 
 	      <li> Sung-Lin Yeh, University of Edinburgh (UK)</li> 
 	      <li> Yingzhi Wang, Zaion (FR)</li> 
 	      <li> Xuechen Liu, Aalto University (FI)</li> 
