--- a/contributing.html
+++ b/contributing.html
@@ -139,21 +139,23 @@
 	      <li> Xuechen Liu, Aalto University (FI)</li> 
 	      <li> Andreas Nautsch, Avignon Université (LIA, FR)</li> 
 	      <li> Pradnya Kandarkar, Concordia University</li>
-	      <li> Jarod Duret, Avignon Université (LIA, FR</li>
+	      <li> Jarod Duret, Avignon Université (LIA, FR)</li>
 	      <li> Sangeet Sagar, Saarland University (GE) </li>
 	      <li> Gaëlle Laperrière, Avignon Université (LIA, FR) </li> 
+        <li>  Pablo Zuluaga, École Polytechnique Fédérale de Lausanne (EPFL, CH)</li>
+        <li>  Florian Mai, École Polytechnique Fédérale de Lausanne (EPFL, CH)</li>
 	      <li> Loren Lugosch, Mila, McGill University (CA)</li>
-              <li> Nauman Dawalatabad, Indian Institute of Technology Madras (IN)</li>
-              <li> Ju-Chieh Chou, National Taiwan University (TW)</li>
-              <li> Abdel Heba, Linagora / University of Toulouse (IRIT, FR)</li>
-              <li> Francois Grondin, University of Sherbrooke (CA)</li>
-              <li> William Aris, University of Sherbrooke (CA)</li>
-              <li> Chien-Feng Liao, National Taiwan University (TW)</li>
-              <li> Samuele Cornell, Università Politecnica delle Marche (IT)</li>
-              <li> Sung-Lin Yeh, National Tsing Hua University (TW)</li>
-              <li> Hwidong Na, Visiting Researcher Samsung SAIL (CA)</li>
-              <li> Yan Gao, University of Cambridge (UK)</li>
-              <li> Szu-Wei Fu, Academia Sinica (TW)</li>
+          <li> Nauman Dawalatabad, Indian Institute of Technology Madras (IN)</li>
+          <li> Ju-Chieh Chou, National Taiwan University (TW)</li>
+          <li> Abdel Heba, Linagora / University of Toulouse (IRIT, FR)</li>
+          <li> Francois Grondin, University of Sherbrooke (CA)</li>
+          <li> William Aris, University of Sherbrooke (CA)</li>
+          <li> Chien-Feng Liao, National Taiwan University (TW)</li>
+          <li> Samuele Cornell, Università Politecnica delle Marche (IT)</li>
+          <li> Sung-Lin Yeh, National Tsing Hua University (TW)</li>
+          <li> Hwidong Na, Visiting Researcher Samsung SAIL (CA)</li>
+          <li> Yan Gao, University of Cambridge (UK)</li>
+          <li> Szu-Wei Fu, Academia Sinica (TW)</li>
 	      <li> Elena Rastorgueva, University of Cambridge (UK)</li>
               <li> Jianyuan Zhong, University of Rochester (USA)<li>
               <li> Brecht Desplanques, Ghent University (BE)<li>
