SELMA project as sponsor

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <div class="work_inner row">
               <div class="col-lg-4">
                 <div class="work_item">
-                    <img src="img/sponsors/logo_nle.png" alt="nle" style="max-width: 200px; padding-top:80px"></i>
+                    <img src="img/sponsors/SELMA-Logo.png" alt="nle" style="max-width: 300px; padding-top:80px"></i>
                 </div>
               </div>
               <div class="col-lg-4">
@@ -332,12 +332,15 @@
 				<div class="work_item">
 					<img src="img/sponsors/samsung_official.png" style="max-width: 250px; padding-top:100px;" alt="">
 				</div>
+				<div class="work_item">
+					<img src="img/sponsors/logo_nle.png" style="max-width: 300px; padding-top:100px;" alt="">
+				</div>
 			  </div>
-		    	<div class="col-lg-4">
+			<div class="col-lg-4">
 				<div class="work_item">
 					<img src="img/sponsors/concordia.png" style="max-width: 250px; padding-top:100px;" alt="">
 				</div>
-			  </div>
+			</div>
 
         </section>
         <!--================End Screen Area =================-->
