switch SELMA to partner instead of sposnor

--- a/about.html
+++ b/about.html
@@ -157,8 +157,9 @@
               <div class="grid_container">
                 <div class="grid">
                   <div><img src="img/partners/logo_lia.png" alt=""></div>
-		  <div><img class="img-partner" src="img/sponsors/concordia.png""></div>
+		              <div><img class="img-partner" src="img/sponsors/concordia.png""></div>
                   <div><img src="img/partners/logo_cambridge.png" alt=""></div>
+                  <div><img src="img/partners/logo_selma.png" alt=""></div>
                   <div><img src="img/partners/logo_sherbrooke.jpg" alt=""></div>
                 </div>
               </div>
