--- a/about.html
+++ b/about.html
@@ -159,7 +159,9 @@
                   <div><img src="img/partners/logo_lia.png" alt=""></div>
 		              <div><img class="img-partner" src="img/sponsors/concordia.png""></div>
                   <div><img src="img/partners/logo_cambridge.png" alt=""></div>
-                  <div><img src="img/partners/logo_selma.png" alt=""></div>
+                  <a href="https://selma-project.eu">
+                    <div><img class="img-partner" src="img/partners/logo_selma.png" alt=""></div>
+                  </a>                
                   <div><img src="img/partners/logo_sherbrooke.jpg" alt=""></div>
                 </div>
               </div>
