--- a/contributing.html
+++ b/contributing.html
@@ -136,6 +136,7 @@
         <li> Georgios Karakasidis, University of Edinburgh (UK)</li> 
 	      <li> Sung-Lin Yeh, University of Edinburgh (UK)</li> 
 	      <li> Yingzhi Wang, Zaion (FR)</li> 
+        <li> Dongwon Kim, Krafton AI (KR)</li> 
 	      <li> Xuechen Liu, Aalto University (FI)</li> 
 	      <li> Andreas Nautsch, Avignon Université (LIA, FR)</li> 
 	      <li> Pradnya Kandarkar, Concordia University</li>
