Links from tutorials_basic.html replaced to docs link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<div class="banner_content">
 								<h2>SpeechBrain <br /></h2>
                 <h3>Open-Source Conversational AI for Everyone</h3>
-								<a class="banner_btn" href="tutorial_basics.html">Get Started</a>
+								<a class="banner_btn" href="https://speechbrain.readthedocs.io/">Get Started</a>
 								<a class="banner_btn2" href="https://github.com/speechbrain/speechbrain">GitHub</a>
 								<a class="banner_btn4" href="https://huggingface.co/speechbrain"><img src="img/hf.svg" style="width:40px"/></a>
 								<a class="banner_btn4" href="https://www.youtube.com/@SpeechBrainProject/videos"><img src="img/youtube.svg" style="width:40px"/></a>
@@ -190,7 +190,7 @@
 									<div class="left_side_text">
 										<h3>Adapts to your needs.</h3>
 										<h6>You can install SpeechBrain via PyPI for quick access to its functionalities, or through a local install for accessing recipes and delving deeper into the toolkit.</h6>
-										<a class="main_btn" href="tutorial_basics.html">Get Started Now</a>
+										<a class="main_btn" href="https://speechbrain.readthedocs.io/">Get Started Now</a>
 									</div>
 								</div>
 								<div class="col-lg-6">
@@ -215,7 +215,7 @@
 									<div class="left_side_text">
 										<h3>A single command.</h3>
 										<h6>Each SpeechBrain recipe defines all hyperparameters into a single YAML file. The training process is then orchestrated by a Python script.</h6>
-										<a class="main_btn" href="tutorial_basics.html">Get Started Now</a>
+										<a class="main_btn" href="https://speechbrain.readthedocs.io/">Get Started Now</a>
 									</div>
 								</div>
 								<div class="col-lg-6">
@@ -243,7 +243,7 @@
   										<h6>
 										SpeechBrain is designed for research and development. Hence, flexibility, transparency, and replicability are core concepts to enhance our daily workflows. Users can easily define custom deep learning models, losses, training/evaluation loops, and input pipelines/transformations, and easily integrate into existing pipelines.
 										</h6>
-  										<a class="main_btn" href="tutorial_basics.html">Get Started Now</a>
+  										<a class="main_btn" href="https://speechbrain.readthedocs.io/">Get Started Now</a>
   									</div>
   								</div>
   								<div class="col-lg-6">
