Redirect tutorials to documentation (#22)
* Redirect tutorials to documentation

See: https://github.com/speechbrain/speechbrain/pull/2685

* Links from tutorials_basic.html replaced to docs link

--- a/index.html
+++ b/index.html
@@ -37,40 +37,28 @@
         <!--================Header Menu Area =================-->
         <header class="header_area">
             <div class="main_menu">
-            	<nav class="navbar navbar-expand-lg navbar-light">
-					<div class="container box_1620">
-						<!-- Brand and toggle get grouped for better mobile display -->
-						<a class="navbar-brand logo_h" href="index.html"><img src="img/speechbrain-horiz-logo.svg" width="175px" alt=""></a>
-						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<!-- Collect the nav links, forms, and other content for toggling -->
-						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-							<ul class="nav navbar-nav menu_nav justify-content-center">
-								<li class="nav-item active"><a class="nav-link" href="">Home</a></li>
-								<li class="nav-item"><a class="nav-link" href="about.html">About SpeechBrain</a>
-								<li class="nav-item"><a class="nav-link" href="contributing.html">Contributing</a>
-								<li class="nav-item"><a class="nav-link" href="https://speechbrain.readthedocs.io/en/latest/index.html">Documentation</a>
-								<li class="nav-item submenu dropdown">
-									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutorials</a>
-									<ul class="dropdown-menu">
-                    							<li class="nav-item"><a class="nav-link" href="tutorial_basics.html">SpeechBrain Basics</a></li>
-                    							<li class="nav-item"><a class="nav-link" href="tutorial_advanced.html">SpeechBrain Advanced</a></li>
-                    							<li class="nav-item"><a class="nav-link" href="tutorial_asr.html">Speech Recognition</a></li>
-                    							<li class="nav-item"><a class="nav-link" href="tutorial_separation.html">Source Separation</a></li>
-                    							<li class="nav-item"><a class="nav-link" href="tutorial_enhancement.html">Speech Enhancement</a></li>
-		    							<li class="nav-item"><a class="nav-link" href="tutorial_classification.html">Speech Classification</a></li>
-                    							<li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
-		    							<li class="nav-item"><a class="nav-link" href="tutorial_nn.html">Neural Architectures</a></li>
-									</ul>
-								<li class="nav-item"><a class="nav-link" href="https://github.com/speechbrain/benchmarks">Benchmarks</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-            	</nav>
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <div class="container box_1620">
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                        <a class="navbar-brand logo_h" href="index.html"><img src="img/speechbrain-horiz-logo.svg" width="175px" alt=""></a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                        <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+                            <ul class="nav navbar-nav menu_nav justify-content-center">
+                                <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                                <li class="nav-item"><a class="nav-link" href="about.html">About SpeechBrain</a></li>
+                                <li class="nav-item"><a class="nav-link" href="contributing.html">Contributing</a></li>
+                                <li class="nav-item"><a class="nav-link" href="https://speechbrain.readthedocs.io/">Documentation</a></li>
+                                <li class="nav-item"><a class="nav-link" href="https://speechbrain.readthedocs.io/">Tutorials</a></li>
+                                <li class="nav-item"><a class="nav-link" href="https://github.com/speechbrain/benchmarks">Benchmarks</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
             </div>
         </header>
         <!--================Header Menu Area =================-->
@@ -84,7 +72,7 @@
 							<div class="banner_content">
 								<h2>SpeechBrain <br /></h2>
                 <h3>Open-Source Conversational AI for Everyone</h3>
-								<a class="banner_btn" href="tutorial_basics.html">Get Started</a>
+								<a class="banner_btn" href="https://speechbrain.readthedocs.io/">Get Started</a>
 								<a class="banner_btn2" href="https://github.com/speechbrain/speechbrain">GitHub</a>
 								<a class="banner_btn4" href="https://huggingface.co/speechbrain"><img src="img/hf.svg" style="width:40px"/></a>
 								<a class="banner_btn4" href="https://www.youtube.com/@SpeechBrainProject/videos"><img src="img/youtube.svg" style="width:40px"/></a>
@@ -202,7 +190,7 @@
 									<div class="left_side_text">
 										<h3>Adapts to your needs.</h3>
 										<h6>You can install SpeechBrain via PyPI for quick access to its functionalities, or through a local install for accessing recipes and delving deeper into the toolkit.</h6>
-										<a class="main_btn" href="tutorial_basics.html">Get Started Now</a>
+										<a class="main_btn" href="https://speechbrain.readthedocs.io/">Get Started Now</a>
 									</div>
 								</div>
 								<div class="col-lg-6">
@@ -227,7 +215,7 @@
 									<div class="left_side_text">
 										<h3>A single command.</h3>
 										<h6>Each SpeechBrain recipe defines all hyperparameters into a single YAML file. The training process is then orchestrated by a Python script.</h6>
-										<a class="main_btn" href="tutorial_basics.html">Get Started Now</a>
+										<a class="main_btn" href="https://speechbrain.readthedocs.io/">Get Started Now</a>
 									</div>
 								</div>
 								<div class="col-lg-6">
@@ -255,7 +243,7 @@
   										<h6>
 										SpeechBrain is designed for research and development. Hence, flexibility, transparency, and replicability are core concepts to enhance our daily workflows. Users can easily define custom deep learning models, losses, training/evaluation loops, and input pipelines/transformations, and easily integrate into existing pipelines.
 										</h6>
-  										<a class="main_btn" href="tutorial_basics.html">Get Started Now</a>
+  										<a class="main_btn" href="https://speechbrain.readthedocs.io/">Get Started Now</a>
   									</div>
   								</div>
   								<div class="col-lg-6">
