Add Ha Nguyen to contributors
Placement in the list was semi-random, I don't really know if we have any convention for this...

--- a/contributing.html
+++ b/contributing.html
@@ -131,6 +131,7 @@
 	      <li> Jarod Duret, Avignon Université (LIA, FR)</li>
 	      <li> Sangeet Sagar, Saarland University (GE) </li>
 	      <li> Gaëlle Laperrière, Avignon Université (LIA, FR) </li> 
+          <li> Ha Nguyen, Oracle (FR) </li>
         <li>  Pablo Zuluaga, École Polytechnique Fédérale de Lausanne (EPFL, CH)</li>
         <li>  Florian Mai, École Polytechnique Fédérale de Lausanne (EPFL, CH)</li>
 	      <li> Loren Lugosch, Mila, McGill University (CA)</li>
