--- a/benchmarks.html
+++ b/benchmarks.html
@@ -75,7 +75,7 @@ The following benchmarks are currently available:
               </p>
 	      <br>
 <a href="https://github.com/speechbrain/benchmarks/tree/main/benchmarks/MOABB" target="_blank">
-    <img src="logo_image_url_here" alt="SpeechBrain-MOABB Logo" style="width: 50px; vertical-align: middle; margin-right: 10px;">
+    <img src="img/benchmarks/sb-moabb-logo.svg" alt="SpeechBrain-MOABB Logo" style="width: 50px; vertical-align: middle; margin-right: 10px;">
 </a>
               <p class="justified large"> <a href="https://github.com/speechbrain/benchmarks/tree/main/benchmarks/MOABB" target="_blank">SpeechBrain-MOABB</a> is an open-source Python library for benchmarking deep neural networks applied to EEG signals.  <br/><br/> This repository provides a set of recipes for processing electroencephalographic (EEG) signals based on the popular <a href="https://github.com/NeuroTechX/moabb" target="_blank">Mother of all BCI Benchmarks (MOABB)</a> , seamlessly integrated with SpeechBrain.
  <br/><br/>
