--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 <li class="nav-item"><a class="nav-link" href="contributing.html">Contributing</a></li>
                                 <li class="nav-item"><a class="nav-link" href="https://speechbrain.readthedocs.io/">Documentation</a></li>
                                 <li class="nav-item"><a class="nav-link" href="https://speechbrain.readthedocs.io/">Tutorials</a></li>
-                                <li class="nav-item"><a class="nav-link" href="https://github.com/speechbrain/benchmarks">Benchmarks</a></li>
+                                <li class="nav-item"><a class="nav-link" href="benchmarks.html">Benchmarks</a></li>
                             </ul>
                         </div>
                     </div>
