--- a/benchmarks.html
+++ b/benchmarks.html
@@ -75,7 +75,7 @@ The following benchmarks are currently available:
               </p>
 	      <br>
 <a href="https://github.com/speechbrain/benchmarks/tree/main/benchmarks/MOABB" target="_blank">
-    <img src="img/benchmarks/sb-moabb-logo.svg" alt="SpeechBrain-MOABB Logo" style="width: 50px; vertical-align: middle; margin-right: 10px;">
+    <img src="img/benchmarks/sb-moabb-logo.svg" alt="SpeechBrain-MOABB Logo" style="width: 500px; vertical-align: middle; margin-right: 100px;">
 </a>
               <p class="justified large"> <a href="https://github.com/speechbrain/benchmarks/tree/main/benchmarks/MOABB" target="_blank">SpeechBrain-MOABB</a> is an open-source Python library for benchmarking deep neural networks applied to EEG signals.  <br/><br/> This repository provides a set of recipes for processing electroencephalographic (EEG) signals based on the popular <a href="https://github.com/NeuroTechX/moabb" target="_blank">Mother of all BCI Benchmarks (MOABB)</a> , seamlessly integrated with SpeechBrain.
  <br/><br/>
@@ -93,7 +93,7 @@ It not only offers an interface for easy model integration and testing but also 
 
 
 <a href="https://github.com/speechbrain/benchmarks/tree/main/benchmarks/DASB" target="_blank">
-    <img src="logo_image_url_here" alt="DASB Logo" style="width: 50px; vertical-align: middle; margin-right: 10px;">
+    <img src="img/benchmarks/DASB_logo.png" alt="DASB Logo" style="width: 250px; vertical-align: middle; margin-right: 250px;">
 </a>
               <p class="justified large"> <a href="https://github.com/speechbrain/benchmarks/tree/main/benchmarks/DASB" target="_blank">DASB - Discrete Audio and Speech Benchmark</a> is a benchmark for evaluating discrete audio representations using popular audio tokenizers like EnCodec, DAC, and many more, integrated with SpeechBrain.
 <br><br>
