--- a/benchmarks.html
+++ b/benchmarks.html
@@ -83,9 +83,9 @@ This package facilitates the integration and evaluation of new algorithms (e.g.,
  <br/><br/>
  Davide Borra, Francesco Paissan, and Mirco Ravanelli. <i>SpeechBrain-MOABB: An open-source Python library for benchmarking deep neural networks applied to EEG signals.</i> Computers in Biology and Medicine, Volume 182, 2024. <a href="https://www.sciencedirect.com/science/article/pii/S001048252401182X" target="_blank">[Paper]</a>
  <br/><br/>
- Davide Borra, Elisa Magosso, and Mirco Ravanelli. <i>https://www.sciencedirect.com/science/article/pii/S0893608024007718</i> Neural Networks, Page 106847, 2024. <a href="https://www.sciencedirect.com/science/article/pii/S001048252401182X" target="_blank">[Paper]</a>
+ Davide Borra, Elisa Magosso, and Mirco Ravanelli. <i>Neural Networks, Page 106847, 2024. <a href="https://www.sciencedirect.com/science/article/pii/S001048252401182X" target="_blank">[Paper]</a>
  <br><br>
-
+<hr class="separation-line">
 
 <a href="https://github.com/speechbrain/benchmarks/tree/main/benchmarks/DASB" target="_blank">
     <img src="img/benchmarks/DASB_logo.png" alt="DASB Logo" style="width: 250px; vertical-align: middle; margin-right: 250px;">
